# moonsync

./: .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .tool-versions  README.md  drizzle.config.ts  match_version.txt  middleware.ts  next.config.js  next.config.mjs  package.json  playwright.config.js  pnpm-lock.yaml  pyproject.toml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json
.github/workflows/: compress-image.ml  main.yml  playwright.yml
.husky/: pre-commit
api/: main.py
app/: globals.css  layout.tsx  page.tsx
app/api/biometrics/: route.ts
app/api/chat/: llamaindex-stream.ts  route.ts
app/api/dashboard/: route.ts
app/chat/: page.tsx
app/components/: chat-section.tsx  footer.tsx  header.tsx  transform.ts
app/components/ui/: data.ts  input.tsx  phase.tsx  speed-dial.tsx  upload-image-preview.tsx
app/drizzle/: index.ts  migrate.ts  schema.ts
app/drizzle/migrations/: 0000_tiny_electro.sql  0001_jazzy_praxagora.sql  (+2 more)
app/home/: header.tsx  page.tsx  stats-card.tsx  stats.tsx
app/onboarding/: _actions.tsx  layout.tsx  page.tsx
app/playground/: main-input.tsx  page.tsx
app/utils/: auth.ts  constants.ts
certs/distribution/: 69TQNA29VJ.cer  69TQNA29VJ.p12  S27MGA92AH.cer  S27MGA92AH.p12
profiles/appstore/: AppStore_app.moonsync.Moonsync.mobileprovision
src/: middleware.ts
src/app/: global-error.jsx  layout.tsx  page.tsx
src/components/: chat-section.tsx
src/drizzle/: index.ts  migrate.ts  schema.ts
src/styles/: globals.css
tests/playwright/: homepage.spec.ts
(+55 files in other folders)
